# Acheron

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md
assets/: asset_registry.json
assets/data/: melbourne_map_data.h
bootstrap/: install.ps1  install.sh
configs/: asset_registry.json
docs/: CODEBASE_RULES.md  ENGINEERING_PRINCIPLES.md  IMPLEMENTATION_ORDER.md  MODULE_BOUNDARIES.md  PLAN.md  Project Archeron -Logic Flow.txt  RESTRUCTURING_OUTPUT.md  TASK_GRAPH.md  Unified Knowledge Base for FIT1045F.yaml  VALIDATION_CHECKLIST.md  ai_workflow_strategy.md  assets_manifest.md  final_architecture_summary.md  final_submission_checklist.md  phase_10_showcase_report.md  phase_6_city_visualization_report.md  phase_7_gameplay_loop_report.md  phase_8_ui_identity_report.md  phase_9_performance_report.md  visual_font_usage.md  visual_guide.md  visual_style_manifest.md
docs/architecture/: ecs_architecture.md  memory_systems.md  renderer_pipeline.md  save_format.md  simulation_scheduler.md
docs/gameplay/: ai_behaviors.md  combat_rules.md  progression_systems.md
docs/profiling/: frame_budget.md  memory_budget.md
scripts/: build_macos.sh  build_windows.ps1  run_macos.sh  run_windows.ps1  setup_macos.sh  setup_windows.ps1
src/: main.cpp
src/core/: assert.cpp  assert.h  logger.cpp  logger.h  time_system.cpp  time_system.h
src/ecs/: archetype.cpp  archetype.h  chunk_migration.cpp  chunk_migration.h  component_registry.cpp  component_registry.h  entity_id.cpp  entity_id.h  query.cpp  query.h  world.cpp  world.h  world_serializer.cpp  world_serializer.h
src/engine/audio/: audio_manager.cpp  audio_manager.h
src/engine/renderer/: melbourne_renderer.cpp  melbourne_renderer.h  overlay_renderer.cpp  overlay_renderer.h  renderer.cpp  renderer.h  road_renderer.cpp  road_renderer.h  simple_renderer.cpp  simple_renderer.h  texture_cache.cpp  texture_cache.h  tile_renderer.cpp  tile_renderer.h  ui_renderer.cpp  ui_renderer.h  visual_palette.h
src/gameplay/: event_system.cpp  event_system.h  interaction_system.cpp  interaction_system.h
src/gameplay/progression/: progression_system.cpp  progression_system.h
src/gameplay/world/: city_generator.cpp  city_generator.h
src/simulation/citizens/: citizen_system.cpp  citizen_system.h
src/simulation/economy/: economy_system.cpp  economy_system.h
src/simulation/scheduler/: job_system.cpp  job_system.h  phase_barrier.cpp  phase_barrier.h
src/simulation/traffic/: traffic_system.cpp  traffic_system.h
src/threading/: lockfree_queue.cpp  lockfree_queue.h  thread.cpp  thread.h
src/ui/: debug_overlay.cpp  debug_overlay.h  minimap_panel.cpp  minimap_panel.h  profiler_panel.cpp  profiler_panel.h  simulation_panel.cpp  simulation_panel.h
src/utilities/: profiler.cpp  profiler.h
src/utilities/memory/: frame_allocator.cpp  frame_allocator.h  linear_allocator.cpp  linear_allocator.h  memory_tracker.cpp  memory_tracker.h  pool_allocator.cpp  pool_allocator.h
src/world/: melbourne_map.h
tests/unit/: memory_tests.cpp
tools/: extract_assets.ps1  generate_svgs.py  melbourne_osm_raw.json  process_melbourne_osm.py  save_osm_cache.py
